Pygame-ctypes 0.10
------------------
 - Fixed unset colorkey with Surface.set_colorkey
 - Performance of simple (non error-checking) SDL/pygame functions improved
 - Software blitting BGR surfaces corrected.
 - Ignore error if default icon not found.

Pygame-ctypes 0.09
------------------
 - pygame.mixer.Channel.get/set_endevent fixed
 - pygame.mixer endevent callback fixed
 - pygame.draw.circle correct box for given radius
 - 24-bit surface to RGBX string supported if no color key is set
 - user post event fix for ctypes 1.0.0
 - Return value of pygame.mouse.get_cursor fixed
 - Support for setuptools in pkgdata.py (allow resources from .egg or .zip)

SDL-ctypes 0.09
---------------
 - No changes, just a version push to keep sync with Pygame-ctypes.

Pygame-ctypes 0.08
------------------
 - Filled ellipse does not hang when rx or ry == 0
 - Allow rotozoom on 24 bit surfaces
 - Rect.topleft.set fixed
 - transform.rotate on big endian fixed
 - Workaround for TTF_RenderText_Solid not working on OS X

SDL-ctypes 0.08
---------------
 - Meaningful exception raised when library not loaded

Pygame-ctypes 0.07
------------------
 - SDL_INIT_NOPARACHUTE init flag passed
 - Many functions now silently downcast floats to ints (yuk)
 - Added pygame_icon.bmp, missing from previous distribution
 - Added freesansbold.ttf, missing from previous distribution
 - pygame.display.update() no longer confuses a length-2 list of
   rects with a rect of two tuples.
 - Added 'x' and 'y' properties to Rect
 - Fix typemask list argument in event functions
 - 'dict' attribute added to Event 
 - Fix user-posted event handling
 - Fix pygame.Surface.subsurface
 - Fix pygame.key.get_mods
 - Add KMOD_* constants
 - Allow (but ignore) keyword arguments to Font initializer
 - Cleanup module namespace in pygame.draw

SDL-ctypes 0.07
---------------
 - SDL_Surface free'd when pygame.Surface deleted
 - Null callbacks permitted
 - Extra refs for all callbacks kept to prevent unexpected segfaults when